--- a/www/index.html
+++ b/www/index.html
@@ -34,11 +34,13 @@
 <!--Adobe Edge Runtime End-->
     </head>
     <body>
+      <div id="wrap">
         <div id="scene" class="edgeLoad-EDGE-4975074">
          <img id="dame" src="img/dame.png">
          <img id="vis" src="img/vis.png" class="edgeLoad-EDGE-4975074"/>
          <img id="pan" src="img/pan.png" class="edgeLoad-EDGE-4975074"/>
-        <div>
+        </div>
+      </div>
         <!--
         <div class="app">
             <h1>Apache Cordova</h1>
