--- a/www/index.html
+++ b/www/index.html
@@ -25,6 +25,26 @@
         <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
         <link rel="stylesheet" type="text/css" href="css/index.css" />
         <title>Hello World</title>
+
+    <script src="js/soundmanager2.js"></script>
+    <script>
+    var mySound;
+    soundManager.setup({
+      url: 'swf/',
+      // optional: use 100% HTML5 mode where available
+      preferFlash: false,
+      onready: function() {
+        mySound = soundManager.createSound({
+          id: 'aSound',
+          url: 'audio/button-0.mp3'
+        });
+      },
+      ontimeout: function() {
+        // Hrmm, SM2 could not start. Missing SWF? Flash blocked? Show an error, etc.?
+        alert("failed to load soundmanager2");
+      }
+    });
+    </script>
 <!--Adobe Edge Runtime-->
     <script type="text/javascript" charset="utf-8" src="index_edgePreload.js"></script>
     <style>
